syntax = "proto3";

package proto;

option go_package = "github.com/sagini18/saas/proto";

service Proxy {
  rpc Subscribe(SubscriptionRequest) returns (SubscriptionResponse);
  rpc StreamCommands(stream CommandStream) returns (stream CommandStream);
}

message SubscriptionRequest {
  string agent_id = 1;
  string queue = 2;
}

message SubscriptionResponse {
  string message = 1;
}

message Command {
  string command = 1;
  string commandID = 2;
  string routingKey = 3;
}

message Response {
  string response = 1;
  string commandID = 2;
  string routingKey = 3;
}

message CommandStream {
  string agent_id = 1;
  Response response = 2;
}
